k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
  labels:
    app: products
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 0%
      maxUnavailable: 50%
  selector:
    matchLabels:
      app: products
  template:
    metadata:
      labels:
        app: products
    spec:
      restartPolicy: Always
      containers:
      - name: products
        image: cluster-registry:5000/nyu-devops/products:1.0.0
        # image: products
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          initialDelaySeconds: 5
          periodSeconds: 30
          httpGet:
            path: /health
            port: 8080
        resources:
          limits:
            cpu: "0.50"
            memory: "128Mi"
          requests:
            cpu: "0.25"
            memory: "64Mi"
